VEIOSS-133 initial ib07 port over from one stop shop

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -72,6 +72,15 @@ microservice {
       host = localhost
       port = 8500
     }
+
+    core-validation {
+      protocol           = http
+      host               = localhost
+      port               = 10192
+      basePath           = "ioss-registration-stub/vec/ossregistration/regvalidation/v1"
+      authorizationToken = secret
+      environment        = test
+    }
   }
 }
 
