--- a/conf/application.conf
+++ b/conf/application.conf
@@ -73,6 +73,15 @@ microservice {
       authorizationToken = secret
       environment        = test
     }
+
+    get-vat-info {
+      protocol           = http
+      host               = localhost
+      port               = 10203
+      basePath           = "one-stop-shop-registration-stub/"
+      authorizationToken = secret
+      environment        = test
+    }
   }
 }
 
