--- a/conf/application.conf
+++ b/conf/application.conf
@@ -26,8 +26,8 @@ play.modules.enabled += "uk.gov.hmrc.play.bootstrap.HttpClientModule"
 play.http.errorHandler = "uk.gov.hmrc.play.bootstrap.backend.http.JsonErrorHandler"
 
 # Play Modules
+play.modules.enabled += "uk.gov.hmrc.play.bootstrap.AuthModule"
 play.modules.enabled += "uk.gov.hmrc.iossregistration.config.Module"
-
 play.modules.enabled += "uk.gov.hmrc.mongo.play.PlayMongoModule"
 
 # The application languages
