VEIOSS-92 | Modify VatInfo model. Amend conf to point to correct stub.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -77,8 +77,8 @@ microservice {
     get-vat-info {
       protocol           = http
       host               = localhost
-      port               = 10203
-      basePath           = "one-stop-shop-registration-stub/"
+      port               = 10192
+      basePath           = "ioss-registration-stub/"
       authorizationToken = secret
       environment        = test
     }
