Veioss 92 | Create GetVatInfo functionality (#3)
* VEIOSS-92 | Implement GetVatInfo functionality.

* VEIOSS-92 | Test and implement vatInfoController.

* VEIOSS-92 | Update VatCustomerInfo model. Remove redundant encryption functionality.

* VEIOSS-92 | Update readme.

* VEIOSS-92 | Change image to reflect correct redirect url in readme.

* VEIOSS-92 | Increase test coverage.

* VEIOSS-92 | Modify VatInfo model. Amend conf to point to correct stub.

* Update README.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -73,6 +73,15 @@ microservice {
       authorizationToken = secret
       environment        = test
     }
+
+    get-vat-info {
+      protocol           = http
+      host               = localhost
+      port               = 10192
+      basePath           = "ioss-registration-stub/"
+      authorizationToken = secret
+      environment        = test
+    }
   }
 }
 
