VEIOSS-53 | Config changes.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -83,7 +83,7 @@ microservice {
       environment        = test
     }
 
-    if {
+    create-registration {
       protocol           = http
       host               = localhost
       port               = 10192
