VEIOSS-181 added external entry

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -94,3 +94,13 @@ microservice {
   }
 }
 
+features {
+  externalEntry = {
+   ttlInDays = 1
+   urls = {
+     journeyStart = "/pay-vat-on-goods-sold-to-eu/register-for-import-one-stop-shop"
+     noMoreWelshJourneyStart = "/pay-vat-on-goods-sold-to-eu/register-for-import-one-stop-shop/no-welsh-service"
+   }
+  }
+}
+
