VEIOSS-191 Allow Trader to Save & Come Back to a Registration

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -57,6 +57,10 @@ play.http.router = prod.Routes
 mongodb {
   uri = "mongodb://localhost:27017/ioss-registration"
   timeToLiveInHours = 1
+  timeToLiveInDays = 28
+  encryption {
+    key = "VqmXp7yigDFxbCUdDdNZVIvbW6RgPNJsliv6swQNCL8="
+  }
 }
 
 microservice {
@@ -137,4 +141,5 @@ features {
    }
   }
 }
+
 
