--- a/conf/application.conf
+++ b/conf/application.conf
@@ -56,6 +56,7 @@ play.http.router = prod.Routes
 
 mongodb {
   uri = "mongodb://localhost:27017/ioss-registration"
+  timeToLiveInHours = 1
 }
 
 microservice {
@@ -63,6 +64,14 @@ microservice {
     auth {
       host = localhost
       port = 8500
+    }
+
+    enrolments {
+        protocol           = http
+        host               = localhost
+        port               = 10192
+        basePath           = "ioss-stop-shop-registration-stub/"
+        callbackBaseUrl    = "http://localhost:10191"
     }
 
     core-validation {
@@ -93,6 +102,8 @@ microservice {
     }
   }
 }
+
+iossEnrolmentKey = "HMRC-IOSS-ORG"
 
 features {
   externalEntry = {
