--- a/conf/application.conf
+++ b/conf/application.conf
@@ -67,11 +67,11 @@ microservice {
     }
 
     enrolments {
-        protocol           = http
-        host               = localhost
-        port               = 10192
-        basePath           = "ioss-stop-shop-registration-stub/"
-        callbackBaseUrl    = "http://localhost:10191"
+      protocol           = http
+      host               = localhost
+      port               = 10192
+      basePath           = "ioss-registration-stub/"
+      callbackBaseUrl    = "http://localhost:10191"
     }
 
     core-validation {
