--- a/conf/application.conf
+++ b/conf/application.conf
@@ -100,6 +100,15 @@ microservice {
       authorizationToken = secret
       environment        = test
     }
+
+    display-registration {
+      protocol           = http
+      host               = localhost
+      port               = 10192
+      basePath           = "ioss-registration-stub/"
+      authorizationToken = secret
+      environment        = test
+    }
   }
 }
 
