VEIOSS-255 Implement IB20 Amend Registration Connector

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -109,6 +109,15 @@ microservice {
       authorizationToken = secret
       environment        = test
     }
+
+    amend-registration {
+      protocol           = http
+      host               = localhost
+      port               = 10192
+      basePath           = "ioss-registration-stub/"
+      authorizationToken = secret
+      environment        = test
+    }
   }
 }
 
