VEIOSS-280 add endpoint for event hub to send them to

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -122,6 +122,15 @@ microservice {
       authorizationToken = secret
       environment        = test
     }
+
+    channel-preference {
+      protocol           = http
+      host               = localhost
+      port               = 10192
+      basePath           = "ioss-registration-stub/"
+      authorizationToken = secret
+      environment        = test
+    }
   }
 }
 
