VEIOSS-450 add getting of multiple accounts

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -78,6 +78,13 @@ microservice {
       callbackBaseUrl    = "http://localhost:10191"
     }
 
+    enrolment-store-proxy {
+      protocol           = http
+      host               = localhost
+      port               = 10192
+      basePath           = "ioss-registration-stub/"
+    }
+
     core-validation {
       protocol           = http
       host               = localhost
