VEIOSS-585 fallback enrolment method

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -144,6 +144,16 @@ microservice {
 features {
   maxRetryCount = 20
   delay = 1000
+  fallbackEnrolments = {
+    enabled = true
+    enrolments = {
+      1 {
+        vrn = "177550000"
+        formBundleNumber = "10000000000001"
+        iossNumber = "IM9001107755"
+      }
+    }
+  }
 }
 
 iossEnrolmentKey = "HMRC-IOSS-ORG"
