VEIOSS-697 | Implement new encryption. Remove redundant code.

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -61,6 +61,7 @@ mongodb {
   timeToLiveInDays = 28
   encryption {
     key = "VqmXp7yigDFxbCUdDdNZVIvbW6RgPNJsliv6swQNCL8="
+    previousKeys = []
   }
 }
 
