VEOSS-2129 Implement feature switch for ActorSystem

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -143,6 +143,7 @@ microservice {
 }
 
 features {
+  enableLastUpdatedDatabaseChange = false
   maxRetryCount = 20
   delay = 1000
   fallbackEnrolments = {
