VEI-661 initial commit for allow intermediaries access to ioss returns

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -139,6 +139,13 @@ microservice {
       authorizationToken = secret
       environment        = test
     }
+    
+    ioss-intermediary-registration {
+      protocol = http
+      host     = localhost
+      port     = 10185
+      basePath = "ioss-intermediary-registration"
+    }
   }
 }
 
@@ -154,6 +161,10 @@ features {
         iossNumber = "IM9001107755"
       }
     }
+  }
+  intermediary = {
+    enabled = true
+    enrolment = "HMRC-IOSS-INT"
   }
 }
 
